--- a/23february/index-ver2.html
+++ b/23february/index-ver2.html
@@ -74,10 +74,10 @@
             <table class="tablet-inner" width="640" role="presentation" cellspacing="0" cellpadding="0" style="line-height: 0; width:640px; border-collapse:collapse;">
               <tbody>
                 <tr role="presentation">
-                  <td role="presentation" height="1570" width="640" background="bg.png" bgcolor="#FFFFFF" valign="top" style="background-position:top center; background-size: 100% auto; -moz-background-size: 100% auto; -webkit-background-size: 100% auto; background-repeat:no-repeat; width:640px; line-height: 0;">
+                  <td role="presentation" height="1570" width="640" background="https://flopsi69.github.io/emails-anastasiya/23february/bg.png" bgcolor="#FFFFFF" valign="top" style="background-position:top center; background-size: 100% auto; -moz-background-size: 100% auto; -webkit-background-size: 100% auto; background-repeat:no-repeat; width:640px; line-height: 0;">
                     <!--[if gte mso 9]>
                             <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="height: 1570px; width: 640px; background-repeat:no-repeat; background-position:top center;">
-                                <v:fill type="tile" src="bg.png" color="#FFFFFF" />
+                                <v:fill type="tile" src="https://flopsi69.github.io/emails-anastasiya/23february/bg.png" color="#FFFFFF" />
                                 <v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0">
                             <![endif]-->
                     <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="640" style="width:640px; line-height: 0;">
@@ -115,7 +115,7 @@
 
                         <tr>
                           <td role="presentation" colspan="8" width="640" align="center">
-                            <img src="podloshka-bg.png" alt="">
+                            <img src="https://flopsi69.github.io/emails-anastasiya/23february/podloshka-bg.png" alt="">
                           </td>
                         </tr>
 
@@ -137,7 +137,7 @@
 
                         <tr>
                           <td role="presentation" colspan="8" width="640" align="center">
-                            <img src="arrow1.png" alt="">
+                            <img src="https://flopsi69.github.io/emails-anastasiya/23february/arrow1.png" alt="">
                           </td>
                         </tr>
 
@@ -147,7 +147,7 @@
 
                         <tr>
                           <td role="presentation" colspan="8" width="640" align="center">
-                            <img src="prize.png" alt="">
+                            <img src="https://flopsi69.github.io/emails-anastasiya/23february/prize.png" alt="">
                           </td>
                         </tr>
 
@@ -157,20 +157,20 @@
 
                         <tr>
                           <td role="presentation" colspan="8" width="640" align="center">
-                            <img src="arrow2.png" alt="">
+                            <img src="https://flopsi69.github.io/emails-anastasiya/23february/arrow2.png" alt="">
                           </td>
                         </tr>
 
                         <tr>
                           <td role="presentation" colspan="8" width="640" align="center">
-                            <img src="video-bg.png" alt="">
+                            <img src="https://flopsi69.github.io/emails-anastasiya/23february/video-bg.png" alt="">
                           </td>
                         </tr>
 
                         <tr>
                           <td role="presentation" width="40" colspan="2" style="line-height: 1;" align="center"></td>
                           <td role="presentation" width="280" colspan="4" style="line-height: 1;" align="center">
-                            <a href="#" style="text-decoration: none;" target="_blank"><img src="button.png" alt="Button" style="max-width: 100%;"></a>
+                            <a href="#" style="text-decoration: none;" target="_blank"><img src="https://flopsi69.github.io/emails-anastasiya/23february/button.png" alt="Button" style="max-width: 100%;"></a>
                           </td>
                           <td role="presentation" width="40" colspan="2" style="line-height: 1;" align="center"></td>
                         </tr>
