--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <mjml>
   <mj-body width='640px'>
-    <mj-section background-url="https://flopsi69.github.io/emails-anastasiya/23february/bg.png" padding="0">
+    <mj-section background-url="https://i.ibb.co/y68rhwH/test.png" padding="0">
       <mj-column padding="0">
         <mj-spacer height='475px'></mj-spacer>
       </mj-column>
@@ -14,7 +14,7 @@
       </mj-column>
     </mj-section>
 
-    <mj-section background-url='https://flopsi69.github.io/emails-anastasiya/23february/podloshka.png' background-repeat='no-repeat' padding='0px 0px 50px'>
+    <mj-section background-url='https://i.ibb.co/Nn6pPCx/podloshka.png' background-repeat='no-repeat' padding='0px 0px 50px'>
       <mj-column>
         <mj-text color='#172D55' align='center' font-size='21px' line-height='30px'>Ведь <span style='font-weight: 700;'>настоящие мужчины</span> и есть<br /> <span style='font-weight: 700;'>самые верные друзья,</span> которыми<br /> Bond Street может похвалиться.</mj-text>
       </mj-column>
@@ -30,20 +30,20 @@
           <span style="background: #172d55; padding: 5px 10px;">номиналом до <span style='font-weight:700;'>3000 рублей!</span> </span>
         </mj-text>
 
-        <mj-image src='https://flopsi69.github.io/emails-anastasiya/23february/arrow1.png' width='20px'></mj-image>
+        <mj-image src='https://i.ibb.co/NW219Hf/arrow1.png' width='20px'></mj-image>
 
-        <mj-image src='https://flopsi69.github.io/emails-anastasiya/23february/prize.png' width='340px'></mj-image>
+        <mj-image src='https://i.ibb.co/sQncTDx/prize.png' width='340px'></mj-image>
 
-        <mj-image src='https://flopsi69.github.io/emails-anastasiya/23february/arrow2.png' width='20px'></mj-image>
+        <mj-image src='https://i.ibb.co/pW1L4bN/arrow2.png' width='20px'></mj-image>
 
       </mj-column>
     </mj-section>
 
-    <mj-section background-url='https://flopsi69.github.io/emails-anastasiya/23february/video.png' background-repeat='no-repeat' background-position="top right" padding='0px'>
+    <mj-section background-url='https://i.ibb.co/8bZ4t9D/video.png' background-repeat='no-repeat' background-position="top right" padding='0px'>
       <mj-column>
-        <mj-image padding='160px 0 160px' src='https://flopsi69.github.io/emails-anastasiya/23february/video-btn.png' width='50px' href='http://bondstreet.ru/action/?key=bs_men_holiday&value=23feb&token=9a6639760b3db1729762a444c18326d174a0c0d5&redirect=%2Fsku%2Fcapsule%2F&utm_source=marketing&utm_medium=email&utm_campaign=bs_men_holiday&utm_content=23feb'></mj-image>
+        <mj-image padding='160px 0 160px' src='https://i.ibb.co/MhYR1Cd/video-btn.png' width='50px' href='http://bondstreet.ru/action/?key=bs_men_holiday&value=23feb&token=9a6639760b3db1729762a444c18326d174a0c0d5&redirect=%2Fsku%2Fcapsule%2F&utm_source=marketing&utm_medium=email&utm_campaign=bs_men_holiday&utm_content=23feb'></mj-image>
 
-        <mj-image src='https://flopsi69.github.io/emails-anastasiya/23february/button.png' width='285px' href='http://bondstreet.ru/action/?key=bs_men_holiday&value=23feb&token=9a6639760b3db1729762a444c18326d174a0c0d5&redirect=%2Fsku%2Fcapsule%2F&utm_source=marketing&utm_medium=email&utm_campaign=bs_men_holiday&utm_content=23feb'></mj-image>
+        <mj-image src='https://i.ibb.co/Hrd887x/button.png' width='285px' href='http://bondstreet.ru/action/?key=bs_men_holiday&value=23feb&token=9a6639760b3db1729762a444c18326d174a0c0d5&redirect=%2Fsku%2Fcapsule%2F&utm_source=marketing&utm_medium=email&utm_campaign=bs_men_holiday&utm_content=23feb'></mj-image>
       </mj-column>
     </mj-section>
   </mj-body>
