--- a/23february/index.html
+++ b/23february/index.html
@@ -1,8 +1,13 @@
 <mjml>
+  <mj-head>
+    <mj-attributes>
+      <mj-all font-family="Roboto,RobotoDraft,Helvetica,Arial,sans-serif" />
+    </mj-attributes>
+  </mj-head>
   <mj-body width='640px'>
-    <mj-section background-url="https://flopsi69.github.io/emails-anastasiya/23february/bg.png" padding="0">
-      <mj-column padding="0">
-        <mj-spacer height='475px'></mj-spacer>
+    <mj-section padding="0">
+      <mj-column>
+        <mj-image padding="0px" src='https://github.com/Flopsi69/emails-anastasiya/blob/master/23february/bg-top.png?raw=true'></mj-image>
       </mj-column>
     </mj-section>
 
@@ -14,13 +19,13 @@
       </mj-column>
     </mj-section>
 
-    <mj-section background-url='https://flopsi69.github.io/emails-anastasiya/23february/podloshka.png' background-repeat='no-repeat' padding='0px 0px 50px'>
+    <mj-section background-url='https://flopsi69.github.io/emails-anastasiya/23february/podloshka.png' background-size='contain' background-position='center' background-repeat='no-repeat' padding='10px 0 20px'>
       <mj-column>
         <mj-text color='#172D55' align='center' font-size='21px' line-height='30px'>Ведь <span style='font-weight: 700;'>настоящие мужчины</span> и есть<br /> <span style='font-weight: 700;'>самые верные друзья,</span> которыми<br /> Bond Street может похвалиться.</mj-text>
       </mj-column>
     </mj-section>
 
-    <mj-section padding='0px'>
+    <mj-section padding='30px 0px 0px 0px'>
       <mj-column>
         <mj-text align='center' color='#172D55' font-size='21px' padding='3px' font-weight='300'><span style='font-weight:700;'>Посмотри видео</span> «Что стоит за словом Дружба»</mj-text>
         <mj-text align='center' font-size='21px' color='#ffffff'>
@@ -39,11 +44,189 @@
       </mj-column>
     </mj-section>
 
-    <mj-section background-url='https://flopsi69.github.io/emails-anastasiya/23february/video.png' background-repeat='no-repeat' background-position="top right" padding='0px'>
+    <mj-section background-color='#ffffff' background-url='https://flopsi69.github.io/emails-anastasiya/23february/video.png' background-size='100%' background-repeat='no-repeat' background-position="top right" padding='0px'>
       <mj-column>
         <mj-image padding='160px 0 160px' src='https://flopsi69.github.io/emails-anastasiya/23february/video-btn.png' width='50px' href='http://bondstreet.ru/action/?key=bs_men_holiday&value=23feb&token=9a6639760b3db1729762a444c18326d174a0c0d5&redirect=%2Fsku%2Fcapsule%2F&utm_source=marketing&utm_medium=email&utm_campaign=bs_men_holiday&utm_content=23feb'></mj-image>
 
         <mj-image src='https://flopsi69.github.io/emails-anastasiya/23february/button.png' width='285px' href='http://bondstreet.ru/action/?key=bs_men_holiday&value=23feb&token=9a6639760b3db1729762a444c18326d174a0c0d5&redirect=%2Fsku%2Fcapsule%2F&utm_source=marketing&utm_medium=email&utm_campaign=bs_men_holiday&utm_content=23feb'></mj-image>
+      </mj-column>
+    </mj-section>
+
+    <mj-section>
+      <mj-column>
+        <mj-raw>
+          <tr>
+            <td role="presentation" width="640" height="25" align="left"> </td>
+          </tr>
+          <tr>
+            <td style="font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif" role="presentation" width="640" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 700;">
+              Насколько интересно тебе это письмо?
+            </td>
+          </tr>
+          <tr>
+            <td role="presentation" width="640" height="15" align="left"></td>
+          </tr>
+          <tr>
+            <td style="font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif" role="presentation" width="640" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+              Выбери оценку от 0 до 10
+            </td>
+          </tr>
+          <tr>
+            <td role="presentation" width="640" height="40" align="left"></td>
+          </tr>
+          <tr>
+            <td role="presentation" width="640" height="34" align="center">
+              <table class="tablet-rating" role="presentation" cellpadding="0" cellspacing="0" border="0" width="500" style="width:500px; line-height: 0;">
+                <tbody>
+                  <tr>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=detractors03&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/50e4b1a5c1b002a31898eb2a7349ab80.png" alt="0" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=detractors03&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/185ae14ad39d8a2cb0b5f965112d4eff.png" alt="1" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=detractors03&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/802d980e96d4cad40c35a6a478ce05b4.png" alt="2" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=detractors03&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/acd745a768b8d8851e920bd285802462.png" alt="3" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=detractors46&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/c8d045773093a9ebf870da0327be3f28.png" alt="4" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=detractors46&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/b8be57e696154cfa780239035b9120c4.png" alt="5" style="max-width: 100%;" />
+                      </a>
+                    </td>
+
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=detractors46&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/cecdf6f1d150f7634514bc003c9b4c9f.png" alt="6" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=passives&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/005671ae7a6b8d006b69ad1c88d69e61.png" alt="7" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=passives&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/69841cd97dcc2386ae8c84681b6febb8.png" alt="8" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=promoters&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/2e762408d1c42764a1685ff60e7cf739.png" alt="9" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                    <td role="presentation" width="50" align="center" style="line-height: 1.25; vertical-align: bottom; color: #030303; font-size: 23px; font-weight: 400;">
+                      <a href="https://www.bondstreet.ru/welcome/?utm_content=promoters&utm_term=thank_you" target="_blank">
+                        <img src="https://feedback.adbakers.com.ua/images/emails/99/d4d797f1d72f9f11b6eeed1d1ce22f4a.png" alt="10" style="max-width: 100%;" />
+                      </a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td role="presentation" width="640" height="40" align="left"></td>
+          </tr>
+          <tr>
+            <td role="presentation" valign="top" align="center" style="">
+              <table class="tablet-inner" role="presentation" cellspacing="0" cellpadding="0" style="width:640px; border-collapse:collapse; line-height: 0;font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif">
+                <tbody>
+                  <tr role="presentation">
+                    <td role="presentation" style="height: 1px; line-height: 0;" bgcolor="#636363"></td>
+                  </tr>
+                  <tr role="presentation">
+                    <td role="presentation" style="height: 20px;"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td role="presentation" valign="top" align="center" style="">
+              <table class="tablet-inner" role="presentation" cellspacing="0" cellpadding="0" style="width:640px; border-collapse:collapse; line-height: 0;font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif">
+                <tbody>
+                  <tr role="presentation">
+                    <td role="presentation" align="center" width="100%" style="line-height: 1; color:#000;font-size: 26px;text-align: center;font-weight: 317; letter-spacing: 0.75em;text-transform: uppercase; ">
+                      Курение убивает</td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td role="presentation" valign="top" align="center" style="">
+              <table class="tablet-inner" role="presentation" cellspacing="0" cellpadding="0" style="width:640px; border-collapse:collapse; line-height: 0;">
+                <tbody>
+                  <tr role="presentation">
+                    <td role="presentation" style="height: 20px;"></td>
+                  </tr>
+                  <tr role="presentation">
+                    <td role="presentation" style="height: 1px; line-height: 0;" bgcolor="#636363"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td role="presentation" align="center" style="">
+              <table class="tablet-inner" role="presentation" cellspacing="0" cellpadding="0" style="width:640px; border-collapse:collapse;font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif">
+                <tbody>
+                  <tr role="presentation">
+                    <td role="presentation" width="20"></td>
+                    <td role="presentation" width="600" style="padding-top: 14px; padding-bottom: 10px; line-height: 1.4;">
+                      <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="590" style="width:590px;">
+                        <tbody>
+                          <tr role="presentation">
+                            <td role="presentation" align="center" width="100%" style="font-size: 8px;color: #000000; text-align: justify; line-height: 12px">
+                              Ты получил это сообщение, так как подтвердил свое согласие компании обществу с ограниченной
+                              ответственностью «Филип Моррис Сэйлз энд Маркетинг» на получение сообщений. Это персональное
+                              сообщение адресовано исключительно тебе и не должно быть переадресовано другим лицам. Любое
+                              иное лицо, случайно или намеренно получившее доступ к этому сообщению, не может
+                              воспользоваться предложениями и возможностями, которые приведены в настоящем сообщении.
+                              Данная информация предназначается только для лиц старше 18 лет, которые являются
+                              потребителями табачной продукции. Если ты не хочешь получать информацию от компании ООО
+                              «Филип Моррис Сэйлз энд Маркетинг», то <a class="refusing" href="mailto:help@bondstreet.ru?subject=Unsubscribe" target="_blank" style="color: #000000; text-decoration: underline;"><span style="color: #000000;">подтверди свой отказ от получения рассылок.</span></a>
+                              Пожалуйста, не отвечайте на данное сообщение, так как ответ по электронной почте
+                              мы не сможем получить.<br />
+                              В случае если информация, содержащаяся в данном сообщении, была получена тобой вследствие
+                              возникновения технических ошибок отправки данного сообщения компанией ООО «Филип Моррис
+                              Сэйлз энд Маркетинг» или третьими лицами, то требования, обязательства и иные отношения,
+                              следующие из данного сообщения, не могут быть выполнены компанией; такие ошибки не могут
+                              считаться предумышленными и/или становиться предметом судебного разбирательства. Компания
+                              ООО «Филип Моррис Сэйлз энд Маркетинг» не несет ответственность за любые убытки, имеющие
+                              отношение или возникающие в результате получения тобой настоящего сообщения, в том числе
+                              в результате каких-либо ошибок, прерываний связи, неисправностей, задержек, компьютерных
+                              вирусов, потери какой-либо прибыли или информации, несанкционированного доступа к твоей
+                              информации третьими лицами.
+                              Больше информации по телефону 8-800-200-05-05
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                    <td role="presentation" width="20"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+          </tr>
+        </mj-raw>
       </mj-column>
     </mj-section>
   </mj-body>
